# price-scraper-sweden

code/: .gitignore  CLI-README.md  CONTRIBUTING.md  DATA-QUALITY-README.md  Dockerfile  FINANCE-COMPARATOR-README.md  FINANCE-SCRAPER-README.md  MAIN-README.md  Makefile  NOTIFICATIONS-README.md  PRICE-COMPARATOR-README.md  PRICE-SCRAPER-README.md  README.md  example.config.json  pyproject.toml  renovate.json
code/.github/: dependabot.yml
code/.github/workflows/: deployment.yml  pull_request.yml  scraper.yml
code/config/production/: config.json  cron_script  mercedes_config.json
code/config/staging/: config.json  cron_script  data_config.json  model_config.json
code/docs/markdown/: CLI-README.md  CONTRIBUTING.md  DATA-QUALITY-README.md  DEV-GUIDELINES-README.md  FINANCE-COMPARATOR-README.md  FINANCE-SCRAPER-README.md  NOTIFICATIONS-README.md  PRICE-COMPARATOR-README.md  PRICE-SCRAPER-README.md
code/src/price_monitor/: __init__.py  __main__.py  bootstrap.py  main.py
code/src/price_monitor/data_quality/: business_rules.py  data_quality_checks.py  data_quality_checks_finance.py  datasampling.py  dq_dataclass.py  dqinsights.py  dqreport.py  dqutils.py  finance_data_quality_processor.py
code/src/price_monitor/finance_comparer/: difference_finance_item.py  difference_finance_item_loader.py  difference_finance_item_repository.py  difference_finance_item_saver.py  finance_line_difference_checker.py  finance_options_comparator.py
code/src/price_monitor/finance_scraper/: finance_vendor_scraper.py  main_finance_scraper.py
code/src/price_monitor/model/: create_option_price_difference_item.py  create_price_difference_item.py  difference_item.py  finance_line_item.py  line_item.py  line_item_option_code.py  vendor.py  (+2 more)
code/test/: test_vendor_scraper.py
(+191 files in other folders)
