[tool.poetry]
name = "price-monitor"
version = "7.0.3"
description = "Price Monitor"
authors = []
readme = "README.md"
packages = [{ include = "src/" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
black = "^24.10.0"
isort = "^5.13.2"
loguru = "^0.7.2"
retry = "^0.9.2"
fastavro = "^1.9.7"
dataclasses-avroschema = "^0.63.2"
strenum = "^0.4.15"
google-cloud-secret-manager = "^2.20.2"
pymsteams = "^0.2.3"
google-cloud-logging = "^3.11.1"
coverage = "^7.6.3"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
typer = "^0.12.5"
pandas = "^2.2.3"
azure-identity = "^1.19.0"
azure-storage-blob = "^12.23.1"
azure-storage-file-datalake = "^12.17.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pytest-env = "^1.1.5"
assertpy = "^1.1"
flake8 = "^7.1.1"
pep8-naming = "^0.14.1"
flake8-formatter-junit-xml = "^0.0.6"

pytest-retry = "^1.6.3"
flake8-pyproject = "^1.2.3"
mypy = "^1.11.2"
[tool.coverage.report]
fail_under = 85

[tool.coverage.run]
omit = ["test/*", "dqinsights.py", "business_rules.py", "main.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
price-monitor = "src.price_monitor.main:app"

[tool.pytest.ini_options]
markers = [
    "cli: marks tests as cli (deselect with '-m \"not cli\"')",
    "tesla: marks tests for vendor tesla",
    "mercedes: marks tests for vendor mercedes",
    "bmw: marks tests for vendor bmw",
    "audi: marks tests for vendor audi",
    "dq: marks tests for data quality checks",
]

[tool.flake8]
ignore = ['E50','W503','E203','F821']

[tool.mypy]
python_version="3.12"